<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_match"
        android:icon="@drawable/ic_baseline_calendar_today_24px"
        android:title="@string/match"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_team"
        android:title="@string/team"
        android:icon="@drawable/ic_group_white_24dp"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/nav_favmatch"
        android:icon="@drawable/ic_baseline_stars_24px"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />

</menu>