<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/menu_add_fav"
        android:icon="@drawable/ic_star_border_white_24dp"
        android:title="@string/action_favorite"
        app:showAsAction="ifRoom"/>

</menu>