<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/tv_team_home"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_weight="2"
        android:layout_gravity="center_vertical"
        tools:text="West Ham" />

    <LinearLayout
        android:id="@+id/date_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="8dp"
            tools:text="Sat, 06 Oct 2018" />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="8dp"
            tools:text="0 vs 1" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_team_away"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="2"
        android:gravity="right"
        android:padding="8dp"
        tools:text="Chelsea" />


</LinearLayout>